--- a/playbook.yml.example
+++ b/playbook.yml.example
@@ -15,6 +15,8 @@
         bc_cyberos_comp_state:
           wallet: present
           boot: present
+          prod: absent
+          monitoring: absent
         install_promstack: true
 
 - name: Converge producer node
@@ -32,4 +34,22 @@
           password: secret
         bc_cyberos_comp_state:
           prod: present
+          wallet: absent
+          boot: absent
+          monitoring: absent
         install_promstack: true
+
+  - name: Converge monitoring node
+    hosts: "*monitoring*"
+    become: true
+    roles:
+      - role: ansible-cyberos
+        vars:
+          bc_docker_registry:
+            login_enabled: false
+          bc_cyberos_comp_state:
+            prod: absent
+            wallet: absent
+            boot: absent
+            monitoring: present
+          install_promstack: true
