--- a/tasks/blockchain/cyberos/main.yml
+++ b/tasks/blockchain/cyberos/main.yml
@@ -41,6 +41,7 @@
   when:
     - install_promstack == true
     - bc_cyberos_comp_state.boot == "present"
+    - not bc_component_name == "monitoring"
   include_tasks: "metrics/{{ bc_component_name }}.yml"
 
 - name: "Set components to prod"
@@ -60,4 +61,18 @@
   when:
     - install_promstack == true
     - bc_cyberos_comp_state.prod == "present"
+    - not bc_component_name == "monitoring"
+  include_tasks: "metrics/{{ bc_component_name }}.yml"
+
+- name: "Set components to metrics"
+  tags:
+    - monitoring
+  set_fact:
+    bc_component_name: "monitoring"
+
+- name: "Setup metrics to {{ bc_component_name }}"
+  when:
+    - install_promstack == true
+    - bc_cyberos_comp_state.monitoring == "present"
+    - bc_component_name == "monitoring"
   include_tasks: "metrics/{{ bc_component_name }}.yml"
