--- a/tasks/docker/registry.yml
+++ b/tasks/docker/registry.yml
@@ -4,8 +4,8 @@
     name: docker
 
 - name: Login to Docker registry
-  when: bc_docker_registry.login_enabled == true
+  when: bc_docker_registry_login == true
   docker_login:
-    registry: "{{ bc_docker_registry.url }}"
-    username: "{{ bc_docker_registry.username }}"
-    password: "{{ bc_docker_registry.password }}"
+    registry: "{{ bc_docker_registry_url }}"
+    username: "{{ bc_docker_username }}"
+    password: "{{ bc_docker_password }}"
