--- a/tasks/bench/main.yml
+++ b/tasks/bench/main.yml
@@ -4,16 +4,16 @@
     path: "{{ item }}"
     state: directory
   with_items:
-    - "{{ bc_path_config }}"
-    - "{{ bc_path_general }}/{{ bc_name }}/{{ bc_component_name }}"
+    - "{{ bc_path_general }}/bench"
+    - "{{ bc_path_general }}/bench/config"
 
 - name: "Create config"
   template:
     src: "configs/bench/bench.config.json.j2"
-    dest: "{{ bc_path_config }}/bench.config.json"
+    dest: "{{ bc_path_general }}/bench/config/bench.config.json"
 
 - name: "Install bench"
   template:
-    src: scripts/bin/bench
+    src: scripts/bin/bench.j2
     dest: /usr/bin/bench
     mode: 0755
