--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,70 +1,14 @@
 ---
 # tasks file for ansible-cyberos
-- name: "Collect facts about all targets"
-  tags:
-    - debug
-    - network
-  run_once: true
-  setup:
-  delegate_to: "{{ item }}"
-  delegate_facts: true
-  loop: "{{ groups['all'] }}"
 
-- name: "Add boot node to group bcboot"
-  tags:
-    - debug
-    - network
-  delegate_to: "{{ item }}"
-  run_once: true
-  add_host:
-    name: "{{ item }}"
-    groups: bcboot
-  loop: "{{ groups['all'] }}"
-  when: '"boot" in hostvars[item]["ansible_hostname"]'
-  changed_when: false
-
-- name: "List hosts in groups all"
-  tags:
-    - never
-    - debug
-    - network
-  debug:
-    msg: "{{ groups['all'] }}"
-
-- name: "Add all nodes to group bcpeers"
-  tags:
-    - debug
-    - network
-  delegate_to: "{{ item }}"
-  run_once: true
-  add_host:
-    name: "{{ item }}"
-    groups: bcpeers
-  loop: "{{ groups['all'] }}"
-  when: '"prod" in hostvars[item]["ansible_hostname"] or "boot" in hostvars[item]["ansible_hostname"]'
-  changed_when: false
-
-- name: "Set boot ip address"
-  run_once: true
-  tags:
-    - debug
-    - network
-  set_fact:
-    bc_boot_ip: "{{ groups['bcboot'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
-
-- name: "Set all peers ip addresses"
-  run_once: true
-  tags:
-    - debug
-    - network
-  set_fact:
-    bc_peers_ip: "{{ groups['bcpeers'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list }}"
+- name: Login to docker registry
+  include_tasks: "init.yml"
 
 - name: Show debug variables
+  include_tasks: "debug/show-state.yml"
   tags:
     - never
     - debug
-  include_tasks: "debug/show-state.yml"
 
 - name: Login to docker registry
   include_tasks: "docker/registry.yml"
