--- a/molecule/monitoring/molecule.yml
+++ b/molecule/monitoring/molecule.yml
@@ -32,6 +32,9 @@ platforms:
       - "customize ['modifyvm', :id, '--cpuexecutioncap', '50']"
   - name: ubuntu1804-monitoring
     box: ubuntu/bionic64
+    instance_raw_config_args:
+      - "vm.network 'forwarded_port', guest: 3000, host: 3000"
+      - "vm.network 'forwarded_port', guest: 9090, host: 9090"
     interfaces:
       - auto_config: true
         network_name: private_network
